Alter build and main class in order to produce an executable jar, and enhance the documentation for this.