@@ -11,7 +11,7 @@
 	<description>
 		A set of tools that will connect to an OpenMRS database and extract all or a subset of its schema and contents
 	</description>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,8 +26,8 @@
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-mxj</artifactId>
-			<version>5.0.12</version>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -57,13 +57,6 @@
 	</dependencies>
 
 	<build>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
-		</testResources>
-
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -73,26 +66,27 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.openmrs.contrib.databaseexporter.DatabaseExporter</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
 				<executions>
 					<execution>
+						<id>make-my-jar-with-dependencies</id>
+						<phase>package</phase>
 						<goals>
-							<goal>test-jar</goal>
+							<goal>single</goal>
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.10</version>
-				<configuration>
-					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
